--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -10,6 +10,8 @@
     --color-teal-400: #34b6a2;
     --color-teal-500: #01a38a;
     --color-teal-400: #01836f;
+    --dark-blue-500: #2b58ff;
+    --dark-blue-400: #3583ff;
     --color-white: #fff;
     --color-border: #e0e0e0;
 }
