feat: responsive cho web

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -41,9 +41,7 @@ h2 {
 }
 
 .btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     padding: 8px 12px;
     border-radius: var(--border-radius);
     cursor: pointer;
