--- a/src/layout/main/TheMain.css
+++ b/src/layout/main/TheMain.css
@@ -44,6 +44,7 @@
     background-size: contain;
     position: absolute;
     cursor: pointer;
+    display: none;
 }
 
 /* todolist */
@@ -224,5 +225,8 @@
     }
     .class-none {
         display: none;
+    }
+    .icon-right {
+        display: block;
     }
 }
